Added updates to  views/pages/index.ejs and views/artials/header.ejs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,12 @@
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
 </div>
+<div ng-app='' class="container">
+	<p>Name : <input type="text" ng-model="name"></p>
+	<h1>Hello {{name}}</h1>
+</div>
+
+
 <div class="container">
   <div class="alert alert-info text-center" role="alert">
     To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs" class="alert-link">Getting Started with Node on Heroku</a> tutorial.
